--- a/eGK/src/pages/crypto-controller/crypto-controller.html
+++ b/eGK/src/pages/crypto-controller/crypto-controller.html
@@ -3,11 +3,10 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Start</ion-title>
+    <ion-title>CryptoController</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Gesundheitskarten-App</h3>
-  <button ion-button secondary menuToggle>Menü öffnen</button>
+
 </ion-content>
