pwa splashscreen color set

--- a/eGK/src/pages/home/home.html
+++ b/eGK/src/pages/home/home.html
@@ -8,6 +8,6 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>Gesundheitskarten-App</h3>
+  <h2>Gesundheitskarte</h2>
   <button ion-button secondary menuToggle>Menü öffnen</button>
 </ion-content>
