--- a/eGK/src/pages/scanner/scanner.html
+++ b/eGK/src/pages/scanner/scanner.html
@@ -8,5 +8,9 @@
 </ion-header>
 
 <ion-content padding>
-
+  <video autoplay></video>
+  <div id="scan-box">
+    <div id="scan-animation"></div>
+  </div>
+  <div [innerHTML]="log"></div>
 </ion-content>
